[tool.poetry]
name = "live-mapping"
version = "0.1.0"
description = ""
authors = ["nialov <nikolasovaskainen@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10.0"
kapalo-py = {path = "../../Pipenv_projects/kapalo-py"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
